# cpu-usage-tracker

./: .gitignore  CMakeLists.txt  README.md  main.c  test_log.txt
.cache/clangd/index/: cpu_analyser.c.9C242205996D90E7.idx  cpu_analyser.h.784CF5018C69F0D6.idx  cpu_printer.c.3BB5879861493E43.idx  cpu_printer.h.8D00A8DD97541895.idx  cpu_reader.c.268EB724C810E5B5.idx  cpu_reader.h.7C28AF5CD2E6CBAF.idx  logger.c.1C2DB0591866E7C2.idx  logger.h.E9E5ED4524BA52BF.idx  main.c.9EFC18082557E7C7.idx  queue.c.F956EC5320636331.idx  test.c.F18BACB6BDA9EE6D.idx  test_cpu_analyser.c.C7973A7EE58BB211.idx  test_cpu_printer.c.AB9F20E68DE1B447.idx  test_cpu_reader.c.6C76169A5648714A.idx  test_logger.c.949F03B1499F03F2.idx  zf_log.c.048A596742754F1A.idx  zf_log.h.2C8B84846610B22D.idx
lib/: CMakeLists.txt
lib/cpu_analyser/: CMakeLists.txt  cpu_analyser.c  cpu_analyser.h
lib/cpu_printer/: CMakeLists.txt  cpu_printer.c  cpu_printer.h
lib/cpu_reader/: CMakeLists.txt  cpu_reader.c  cpu_reader.h
lib/logger/: CMakeLists.txt  logger.c  logger.h
lib/watchdog/: CMakeLists.txt  watchdog.c  watchdog.h
src/: main.c
tests/: CMakeLists.txt  test_cpu_analyser.c  test_cpu_printer.c  test_cpu_reader.c  test_logger.c
